# rust_arroyo

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
examples/: base_consumer.rs  base_processor.rs
scripts/: git-precommit-hook
src/: lib.rs
src/backends/: mod.rs
src/backends/kafka/: config.rs  errors.rs  mappings.rs  mod.rs  producer.rs
src/backends/local/: broker.rs  mod.rs
src/backends/storages/: memory.rs  mod.rs
src/processing/: mod.rs
src/processing/strategies/: async_noop.rs  mod.rs  noop.rs  transform.rs
src/types/: errors.rs  mod.rs
src/utils/: clock.rs  metrics.rs
