[package]
name = "rust_arroyo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
uuid = "0.8"
by_address = "1.0.4"
rdkafka = { version = "0.28", features = ["cmake-build"] }
thiserror = "1.0"
cadence = "0.29.0"
lazy_static = "1.4.0"
parking_lot = "0.10.0"
rand="0.8.5"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }

[[bin]]
name = "errors-consumer"
path = "src/bin/consumer/errors.rs"
